fix(cookies): move cookies behind mobile navigation

--- a/src/scss/base/_cookies.scss
+++ b/src/scss/base/_cookies.scss
@@ -6,7 +6,7 @@
     border-radius: 0;
     background-color: $color-white1;
     color: rgba($color-primary, .3);
-    z-index: 999;
+    z-index: 998;
 }
 
 .cc-banner.cc-theme-edgeless .cc-btn {
